samples/_failures_safe/1761073904_39fc1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f60122f7.c: In function ‘main’:
./samples/SAFE/__tmp_f60122f7.c:143:12: error: missing terminating " character
  143 |     printf("Total inputs
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_f60122f7.c:143:5: error: expected expression at end of input
  143 |     printf("Total inputs
      |     ^~~~~~
./samples/SAFE/__tmp_f60122f7.c:143:5: error: expected declaration or statement at end of input
